--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>lhf.blue</title>
 
 	<link rel='preload' async as='image' type='image/gif' href='https://app.pixelworm.io/assets/images/px_new_loading.gif'>
-	<link rel='preload' async as='image' type='image/png' href='/assets/template.webp'>
+	<link rel='preload' async as='image' type='image/png' href='build/assets/template.webp'>
 	<script defer src='/build/bundle.js'></script>
 	<style>
 		@import '/global.css';
