--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 	<title>lhf.blue</title>
 
+	<link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel='preload' async as='image' type='image/gif' href='https://app.pixelworm.io/assets/images/px_new_loading.gif'>
 	<link rel='preload' async as='image' type='image/png' href='build/assets/template.webp'>
 	<script defer src='/build/bundle.js'></script>
