--- a/paste/index.html
+++ b/paste/index.html
@@ -9,12 +9,11 @@
 	<link rel="icon" async href="/assets/favicon.png" as='image' type='image/png'>
 	<link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel='preload' async as='image' type='image/gif' href='/assets/loader.gif'>
-    <script type="module" defer src="/dist/home.js"></script>
-    <style>
-        @import '/global.css';
+    <script type="module" defer src="/dist/paste.js"></script>
+	<style>
+		@import '/global.css';
         @import '/dist/bundle.css';
-    </style>
-
+	</style>
 </head>
 
 <body class="js-loading">
